--- a/devopsportfolio/index.html
+++ b/devopsportfolio/index.html
@@ -21,9 +21,9 @@
                 <p>
                     Designed and developed an Azure ETL data pipeline that extracts data daily from various sources,
                     performs transformations using Azure Data Factory, Databricks, and Data Lake. This implementation
-                    resulted in efficiency gains for OS licensing, reduced manual efforts by 20%, and valuable insights.
-                    Furthermore, trained and deployed a cost-saving ML model using LSTM, TensorFlow, Scikit Learn,
-                    Pandas, NumPy, Matplotlib, and Seaborn, saving over $500k per year.
+                    resulted in efficiency gains for OS licensing, reduced manual efforts by 10 hours per week, and
+                    valuable insights. Furthermore, trained and deployed a cost-saving ML model using LSTM, TensorFlow,
+                    Scikit Learn, Pandas, NumPy, Matplotlib, and Seaborn, saving over $500k per year.
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
@@ -164,8 +164,8 @@
                     Assisted a business in resolving challenges related to manual file uploads to SharePoint. Designed
                     and implemented an on-prem to SharePoint integration with a fully automated workflow, including
                     triggers, schedules, error handling, and reporting mechanisms. Significantly improved efficiency and
-                    effectiveness of the file management system, reducing manual effort by 50% while enhancing accuracy
-                    and timeliness of file uploads. Generated valuable insights into the file management process.
+                    effectiveness of the file management system, reducing manual effort by 5 hours per week while
+                    enhancing accuracy. Generated valuable insights into the file management process.
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
