--- a/mlsupplychain/index.html
+++ b/mlsupplychain/index.html
@@ -197,11 +197,25 @@
                         http.setRequestHeader("Content-Type", "application/json");
                         http.onreadystatechange = function () {
                             if (http.readyState == 4 && http.status == 200) {
-                                var response = http.responseText
-                                document.getElementById("prediction").innerHTML = response;
+                                var response = http.responseText;
+                                displayResponse(response);
                             }
-                        }
+                        };
                         http.send(JSON.stringify({ "customer_id": [feature1], "product_name": [feature2], "order_date": [feature3], "days_for_delivery": [feature4], "order_qty": [feature5] }));
+                    }
+                    function displayResponse(response) {
+                        var index = 0;
+                        var interval = setInterval(function () {
+                            if (index === 0) {
+                                document.getElementById("prediction").innerHTML = response[index];
+                            } else {
+                                document.getElementById("prediction").innerHTML += response[index];
+                            }
+                            index++;
+                            if (index >= response.length) {
+                                clearInterval(interval);
+                            }
+                        }, 10);
                     }
                 </script>
             </section>
