--- a/mltelecom/index.html
+++ b/mltelecom/index.html
@@ -139,11 +139,25 @@
                         http.setRequestHeader("Content-Type", "application/json");
                         http.onreadystatechange = function () {
                             if (http.readyState == 4 && http.status == 200) {
-                                var response = http.responseText
-                                document.getElementById("prediction").innerHTML = response;
+                                var response = http.responseText;
+                                displayResponse(response);
                             }
-                        }
+                        };
                         http.send(JSON.stringify({ "city_name": [feature1], "time_period": [feature2], "valid_period": [feature3], "data_size": [feature4] }));
+                    }
+                    function displayResponse(response) {
+                        var index = 0;
+                        var interval = setInterval(function () {
+                            if (index === 0) {
+                                document.getElementById("prediction").innerHTML = response[index];
+                            } else {
+                                document.getElementById("prediction").innerHTML += response[index];
+                            }
+                            index++;
+                            if (index >= response.length) {
+                                clearInterval(interval);
+                            }
+                        }, 10);
                     }
                 </script>
             </section>
