--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
                     model was fine-tuned using LSTM, Bidirectional LSTM, and BERT.
                 </p>
                 <p>
-                    <a href="#"><img src="https://img.shields.io/badge/python-22212B?logo=python" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/jupyter-22212B?logo=jupyter" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/tensorflow-22212B?logo=tensorflow" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/sklearn-22212B?logo=scikit-learn" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/spacy-22212B?logo=spacy" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/twitter-22212B?logo=twitter" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/jupyter-161B22?logo=jupyter" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/tensorflow-161B22?logo=tensorflow" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/sklearn-161B22?logo=scikit-learn" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/spacy-161B22?logo=spacy" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/twitter-161B22?logo=twitter" alt="" /></a>
                 </p>
                 <p>
                     <a
@@ -47,18 +47,18 @@
                     savings of over $500k per year.
                 </p>
                 <p>
-                    <a href="#"><img src="https://img.shields.io/badge/python-22212B?logo=python" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/jupyter-22212B?logo=jupyter" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/tensorflow-22212B?logo=tensorflow" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/sklearn-22212B?logo=scikit-learn" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/pandas-22212B?logo=pandas" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/numpy-22212B?logo=numpy" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/azure-22212B?logo=microsoftazure" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/azure_functions-22212B?logo=azure-functions"
+                    <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/jupyter-161B22?logo=jupyter" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/tensorflow-161B22?logo=tensorflow" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/sklearn-161B22?logo=scikit-learn" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/pandas-161B22?logo=pandas" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/numpy-161B22?logo=numpy" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/azure-161B22?logo=microsoftazure" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/azure_functions-161B22?logo=azure-functions"
                             alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/powerbi-22212B?logo=powerbi" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/github-22212B?logo=github" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/githubactions-22212B?logo=githubactions"
+                    <a href="#"><img src="https://img.shields.io/badge/powerbi-161B22?logo=powerbi" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/githubactions-161B22?logo=githubactions"
                             alt="" /></a>
                 </p>
                 <p>
@@ -75,13 +75,13 @@
                     pathogens using a Convolutional Neural Network using TensorFlow and OpenCV.
                 </p>
                 <p>
-                    <a href="#"><img src="https://img.shields.io/badge/python-22212B?logo=python" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/jupyter-22212B?logo=jupyter" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/tensorflow-22212B?logo=tensorflow" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/numpy-22212B?logo=numpy" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/opencv-22212B?logo=opencv" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/github-22212B?logo=github" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/githubactions-22212B?logo=githubactions"
+                    <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/jupyter-161B22?logo=jupyter" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/tensorflow-161B22?logo=tensorflow" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/numpy-161B22?logo=numpy" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/opencv-161B22?logo=opencv" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/githubactions-161B22?logo=githubactions"
                             alt="" /></a>
                 </p>
                 <p>
@@ -106,18 +106,18 @@
                     performance.
                 </p>
                 <p>
-                    <a href="#"><img src="https://img.shields.io/badge/python-22212B?logo=python" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/jupyter-22212B?logo=jupyter" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/tensorflow-22212B?logo=tensorflow" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/sklearn-22212B?logo=scikit-learn" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/pandas-22212B?logo=pandas" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/numpy-22212B?logo=numpy" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/azure-22212B?logo=microsoftazure" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/azure_functions-22212B?logo=azure-functions"
+                    <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/jupyter-161B22?logo=jupyter" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/tensorflow-161B22?logo=tensorflow" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/sklearn-161B22?logo=scikit-learn" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/pandas-161B22?logo=pandas" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/numpy-161B22?logo=numpy" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/azure-161B22?logo=microsoftazure" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/azure_functions-161B22?logo=azure-functions"
                             alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/powerbi-22212B?logo=powerbi" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/github-22212B?logo=github" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/githubactions-22212B?logo=githubactions"
+                    <a href="#"><img src="https://img.shields.io/badge/powerbi-161B22?logo=powerbi" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/githubactions-161B22?logo=githubactions"
                             alt="" /></a>
                 </p>
                 <p>
@@ -136,18 +136,18 @@
                     for both the mother and baby.
                 </p>
                 <p>
-                    <a href="#"><img src="https://img.shields.io/badge/python-22212B?logo=python" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/jupyter-22212B?logo=jupyter" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/tensorflow-22212B?logo=tensorflow" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/sklearn-22212B?logo=scikit-learn" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/pandas-22212B?logo=pandas" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/numpy-22212B?logo=numpy" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/azure-22212B?logo=microsoftazure" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/azure_functions-22212B?logo=azure-functions"
+                    <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/jupyter-161B22?logo=jupyter" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/tensorflow-161B22?logo=tensorflow" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/sklearn-161B22?logo=scikit-learn" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/pandas-161B22?logo=pandas" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/numpy-161B22?logo=numpy" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/azure-161B22?logo=microsoftazure" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/azure_functions-161B22?logo=azure-functions"
                             alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/powerbi-22212B?logo=powerbi" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/github-22212B?logo=github" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/githubactions-22212B?logo=githubactions"
+                    <a href="#"><img src="https://img.shields.io/badge/powerbi-161B22?logo=powerbi" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/githubactions-161B22?logo=githubactions"
                             alt="" /></a>
                 </p>
                 <p>
@@ -167,23 +167,23 @@
                 </p>
                 <p>
                 <p>
-                    <a href="#"><img src="https://img.shields.io/badge/python-22212B?logo=python" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/jupyter-22212B?logo=jupyter" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/tensorflow-22212B?logo=tensorflow" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/sklearn-22212B?logo=scikit-learn" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/pandas-22212B?logo=pandas" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/numpy-22212B?logo=numpy" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/azure-22212B?logo=microsoftazure" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/azure_functions-22212B?logo=azure-functions"
+                    <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/jupyter-161B22?logo=jupyter" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/tensorflow-161B22?logo=tensorflow" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/sklearn-161B22?logo=scikit-learn" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/pandas-161B22?logo=pandas" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/numpy-161B22?logo=numpy" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/azure-161B22?logo=microsoftazure" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/azure_functions-161B22?logo=azure-functions"
                             alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/databricks-22212B?logo=databricks" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/databricks-161B22?logo=databricks" alt="" /></a>
                     <a href="#"><img
-                            src="https://img.shields.io/badge/microsoft%20sql%20server-22212B?logo=microsoft%20sql%20server"
+                            src="https://img.shields.io/badge/microsoft%20sql%20server-161B22?logo=microsoft%20sql%20server"
                             alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/mysql-22212B?logo=mysql" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/powerbi-22212B?logo=powerbi" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/github-22212B?logo=github" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/githubactions-22212B?logo=githubactions"
+                    <a href="#"><img src="https://img.shields.io/badge/mysql-161B22?logo=mysql" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/powerbi-161B22?logo=powerbi" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/githubactions-161B22?logo=githubactions"
                             alt="" /></a>
                 </p>
                 </p>
@@ -203,13 +203,13 @@
                     quickly identify areas of concern.
                 </p>
                 <p>
-                    <a href="#"><img src="https://img.shields.io/badge/python-22212B?logo=python" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/jupyter-22212B?logo=jupyter" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/pandas-22212B?logo=pandas" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/numpy-22212B?logo=numpy" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/powerbi-22212B?logo=powerbi" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/github-22212B?logo=github" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/githubactions-22212B?logo=githubactions"
+                    <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/jupyter-161B22?logo=jupyter" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/pandas-161B22?logo=pandas" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/numpy-161B22?logo=numpy" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/powerbi-161B22?logo=powerbi" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/githubactions-161B22?logo=githubactions"
                             alt="" /></a>
                 </p>
                 <p>
