--- a/index.html
+++ b/index.html
@@ -69,10 +69,12 @@
                 <p><img src="images/lstm.png" style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
             </section>
             <section>
-                <h3><b>CNN: A Machine Learning Approach for Identifying Coffee Plant Diseases</b></h3>
+                <h3><b>CNN: Accurate COVID-19 Detection using Machine Learning</b></h3>
                 <p>
-                    Developed an application that can detect diverse types of coffee plant diseases caused by pests and
-                    pathogens using a Convolutional Neural Network using TensorFlow and OpenCV.
+                    Developed an application that utilizes a Convolutional Neural Network to classify X-ray images for
+                    Covid infection detection. Increased the sample size using data augmentation and achieved a 96%
+                    accuracy using MobileNet (transfer learning). The application has been deployed to the cloud,
+                    enabling efficient diagnosis of Covid infections by doctors.
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
@@ -86,8 +88,8 @@
                 </p>
                 <p>
                     <a
-                        href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlcoffeeplantdiseases/notebook/notebook.ipynb"><b>View
-                            Notebook</b></a>, <a href="https://www.lyoh001.com/mlcoffeeplantdiseases"><b>View
+                        href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlcovid/notebook/notebook_cnn.ipynb"><b>View
+                            Notebook</b></a>, <a href="https://www.lyoh001.com/mlcovid"><b>View
                             Demo</b></a>
                 </p>
                 <p><img src="images/cnn.png" style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
