--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body class="u-body">
     <section class="u-align-center u-clearfix u-grey-90 u-section-2">
         <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-            <img class="u-image u-image-default u-image-1" src="/images/cloud.jpg" alt="" data-image-width="1620"
+            <!-- <img class="u-image u-image-default u-image-1" src="/images/cloud.jpg" alt="" data-image-width="1620" data-image-height="1080"> -->
+            <!-- <img class="u-image u-image-default u-image-1" src="/images/2.jpg" alt="" data-image-width="1620" data-image-height="1080"> -->
+            <img class="u-image u-image-default u-image-1" src="/images/4.jpg" alt="" data-image-width="1620"
                 data-image-height="1080">
             <div class="u-container-style u-expanded-width-xs u-group u-shape-rectangle u-group-1">
                 <div class="u-container-layout u-valign-middle u-container-layout-1">
