--- a/mlportfolio/index.html
+++ b/mlportfolio/index.html
@@ -109,8 +109,8 @@
                     performance.
                 </p>
                 <p>
-                    <a href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mltelecom/notebook/notebook.ipynb"><b>View
-                            Notebook</b></a>, <a href="https://www.lyoh001.com/mltelecom"><b>View Demo</b></a>
+                    <a href="https://github.com/lyoh001/DLCovid19"><b>View
+                            GitHub</b></a>, <a href="https://www.lyoh001.com/mltelecom"><b>View Demo</b></a>
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
