--- a/mlportfolio/index.html
+++ b/mlportfolio/index.html
@@ -78,9 +78,8 @@
                     enabling efficient diagnosis of Covid infections by doctors.
                 </p>
                 <p>
-                    <a
-                        href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlcovid/notebook/notebook_cnn.ipynb"><b>View
-                            Notebook</b></a>, <a href="https://www.lyoh001.com/mlcovid"><b>View
+                    <a href="https://github.com/lyoh001/DLCovid19"><b>View
+                            GitHub</b></a>, <a href="https://www.lyoh001.com/mlcovid"><b>View
                             Demo</b></a>
                 </p>
                 <p>
@@ -109,8 +108,8 @@
                     performance.
                 </p>
                 <p>
-                    <a href="https://github.com/lyoh001/DLCovid19"><b>View
-                            GitHub</b></a>, <a href="https://www.lyoh001.com/mltelecom"><b>View Demo</b></a>
+                    <a href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mltelecom/notebook/notebook.ipynb"><b>View
+                            Notebook</b></a>, <a href="https://www.lyoh001.com/mltelecom"><b>View Demo</b></a>
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
