--- a/mlportfolio/index.html
+++ b/mlportfolio/index.html
@@ -95,6 +95,30 @@
                 <p><img src="images/cnn.png" style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
             </section>
             <section>
+                <h3><b>Stable Diffusion: AI-Generated Image Web Application</b></h3>
+                <p>
+                    As the sole contributor, I conceptualized, developed, and implemented a dynamic web application
+                    dedicated to generating AI-generated images. Leveraging my expertise in machine learning and web
+                    development, I created an intuitive and user-friendly interface that allows users to effortlessly
+                    generate unique images through prompt inputs.
+                </p>
+                <p>
+                    <a
+                        href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlstablediffusion/notebook/notebook.ipynb"><b>View
+                            Notebook</b></a>
+                </p>
+                <p>
+                    <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/jupyter-161B22?logo=jupyter" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/githubactions-161B22?logo=githubactions"
+                            alt="" /></a>
+                </p>
+                <p><img src="/mlportfolio/images/stable_diffusion.png"
+                        style="max-width: 80%; height: auto; display: block; margin: 0 auto;">
+                </p>
+            </section>
+            <section>
                 <h3><b>ANN: Unveiling Telecommunication Hidden Insights with Machine Learning</b></h3>
                 <p>
                     Participated in a Power BI competition hosted by Codebasics and have built a complete end-to-end
