--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
             <div class="u-align-left u-container-style u-expanded-width-xs u-group u-group-2">
                 <div class="u-container-layout u-valign-top u-container-layout-3">
-                    <a href="https://www.lyoh001.com/mlportfolio"
+                    <a href="https://lyoh001.com/mlportfolio"
                         class="u-border-2 u-border-white u-btn u-button-style u-hover-white u-none u-text-active-black u-text-body-alt-color u-text-hover-black u-btn-2">ML
                         Portfolio&nbsp;<span class="u-icon u-icon-1"><svg class="u-svg-content" viewBox="0 0 512 512"
                                 x="0px" y="0px" style="width: 1em; height: 1em;">
@@ -35,7 +35,7 @@
                             </svg>
                         </span>
                     </a>
-                    <a href="https://www.lyoh001.com/devopsportfolio"
+                    <a href="https://lyoh001.com/devopsportfolio"
                         class="u-border-2 u-border-white u-btn u-button-style u-hover-white u-none u-text-active-black u-text-body-alt-color u-text-hover-black u-btn-2">DevOps
                         Portfolio&nbsp;<span class="u-icon u-icon-1"><svg class="u-svg-content" viewBox="0 0 512 512"
                                 x="0px" y="0px" style="width: 1em; height: 1em;">
