--- a/devopsportfolio/index.html
+++ b/devopsportfolio/index.html
@@ -27,7 +27,7 @@
                 </p>
                 <p>
                     <a href="https://github.com/lyoh001/AzureVMAudit"><b>View
-                            Github</b></a>, <a href="https://www.lyoh001.com/mlvmaudit"><b>View Demo</b></a>
+                            Github</b></a>, <a href="https://lyoh001.com/mlvmaudit"><b>View Demo</b></a>
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
@@ -238,7 +238,7 @@
         <ul class="social">
             <li><a href="https://github.com/lyoh001"><i class="fab fa-github"></i></a></li>
             <li><a href="https://linkedin.com/in/lyoh001"><i class="fab fa-linkedin"></i></a></li>
-            <li><a href="https://www.lyoh001.com"><i class="fa fa-home"></i></a></li>
+            <li><a href="https://lyoh001.com"><i class="fa fa-home"></i></a></li>
             <li><a href="mailto:lyoh001@gmail.com"><i class="fa fa-envelope"></i></a></li>
         </ul>
     </footer>
