--- a/mlportfolio/index.html
+++ b/mlportfolio/index.html
@@ -49,7 +49,7 @@
                 <p>
                     <a
                         href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlcloudaudit/notebook/notebook.ipynb"><b>View
-                            Notebook</b></a>, <a href="https://www.lyoh001.com/mlvmaudit"><b>View Demo</b></a>
+                            Notebook</b></a>, <a href="https://lyoh001.com/mlvmaudit"><b>View Demo</b></a>
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
@@ -79,7 +79,7 @@
                 </p>
                 <p>
                     <a href="https://github.com/lyoh001/DLCovid19"><b>View
-                            GitHub</b></a>, <a href="https://www.lyoh001.com/mlcovid"><b>View
+                            GitHub</b></a>, <a href="https://lyoh001.com/mlcovid"><b>View
                             Demo</b></a>
                 </p>
                 <p>
@@ -109,7 +109,7 @@
                 </p>
                 <p>
                     <a href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mltelecom/notebook/notebook.ipynb"><b>View
-                            Notebook</b></a>, <a href="https://www.lyoh001.com/mltelecom"><b>View Demo</b></a>
+                            Notebook</b></a>, <a href="https://lyoh001.com/mltelecom"><b>View Demo</b></a>
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
@@ -165,7 +165,7 @@
                 <p>
                     <a
                         href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlmaternalmortality/notebook/notebook.ipynb"><b>View
-                            Notebook</b></a>, <a href="https://www.lyoh001.com/mlmaternalmortality"><b>View Demo</b></a>
+                            Notebook</b></a>, <a href="https://lyoh001.com/mlmaternalmortality"><b>View Demo</b></a>
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
@@ -250,7 +250,7 @@
         <ul class="social">
             <li><a href="https://github.com/lyoh001"><i class="fab fa-github"></i></a></li>
             <li><a href="https://linkedin.com/in/lyoh001"><i class="fab fa-linkedin"></i></a></li>
-            <li><a href="https://www.lyoh001.com"><i class="fa fa-home"></i></a></li>
+            <li><a href="https://lyoh001.com"><i class="fa fa-home"></i></a></li>
             <li><a href="mailto:lyoh001@gmail.com"><i class="fa fa-envelope"></i></a></li>
         </ul>
     </footer>
