--- a/mltelecom/index.html
+++ b/mltelecom/index.html
@@ -168,7 +168,7 @@
         <ul class="social">
             <li><a href="https://github.com/lyoh001"><i class="fab fa-github"></i></a></li>
             <li><a href="https://linkedin.com/in/lyoh001"><i class="fab fa-linkedin"></i></a></li>
-            <li><a href="https://www.lyoh001.com"><i class="fa fa-home"></i></a></li>
+            <li><a href="https://lyoh001.com"><i class="fa fa-home"></i></a></li>
             <li><a href="mailto:lyoh001@gmail.com"><i class="fa fa-envelope"></i></a></li>
         </ul>
     </footer>
