--- a/devopsportfolio/index.html
+++ b/devopsportfolio/index.html
@@ -216,16 +216,18 @@
                         style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
             </section>
             <section>
-                <h3><b>Infrastructure as Code with Azure Bicep</b></h3>
+                <h3><b>Infrastructure as Code with Azure Bicep and AWS CDK</b></h3>
                 <p>
-                    Accelerating a rapid deployment to Azure using Infrastructure as Code "aka Azure Bicep" with Github
-                    actions CICD pipeline.
+                    Accelerating a rapid deployment to Azure and AWS using Infrastructure as Code with Github actions
+                    CICD pipeline.
                 </p>
                 <p>
-                    <a href="https://github.com/lyoh001/AzureBicep"><b>View Github</b></a>
+                    <a href="https://github.com/lyoh001/AzureBicep"><b>View Azure Bicep</b></a>, <a
+                        href="https://github.com/lyoh001/AWSCdk"><b>View AWS CDK</b></a>
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/azure-161B22?logo=microsoftazure" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/aws-161B22?logo=amazon-aws" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/githubactions-161B22?logo=githubactions"
                             alt="" /></a>
