--- a/mlcoffeeplantdiseases/index.html
+++ b/mlcoffeeplantdiseases/index.html
@@ -46,7 +46,7 @@
             </section>
         </article>
         <article id="mainRight">
-            <section>
+            <!-- <section>
                 <h2>PROBLEM STATEMENT</h2>
                 <p>The Ethiopian Coffee and Tea Authority reported that Arabica coffee is affected by three major fungal
                     diseases which greatly impact production and consumption in the country. However, the current method
@@ -55,7 +55,7 @@
                     One solution is to utilize deep learning, object detection, and image classification to detect
                     various types of coffee plant diseases caused by pests and pathogens.
                 </p>
-            </section>
+            </section> -->
             <section>
                 <h2>COFFEE PLANT DISEASES AI DETECTION</h2>
                 <p>
