--- a/mlcovid/index.html
+++ b/mlcovid/index.html
@@ -60,7 +60,7 @@
             </section>
         </article>
         <article id="mainRight">
-            <section>
+            <!-- <section>
                 <h2>PROBLEM STATEMENT</h2>
                 <p>COVID-19 is confirmed using PCR and can present on chest X-rays and CT images with a moderate
                     characteristic pattern. The rate of transmission depends on the ability to identify infected
@@ -71,7 +71,7 @@
                     have bilateral ground-glass opacity and subsegmental areas of consolidation. Later CT images of
                     non-ICU patients display bilateral ground-glass opacity with resolved consolidation.
                 </p>
-            </section>
+            </section> -->
             <section>
                 <h2>COVID XRAY AI DETECTION</h2>
                 <p>
