--- a/mlportfolio/index.html
+++ b/mlportfolio/index.html
@@ -132,10 +132,9 @@
             <section>
                 <h3><b>Stable Diffusion: AI-Generated Image Web Application</b></h3>
                 <p>
-                    As the sole contributor, I conceptualized, developed, and implemented a dynamic web application
-                    dedicated to generating AI-generated images. Leveraging my expertise in machine learning and web
-                    development, I created an intuitive and user-friendly interface that allows users to effortlessly
-                    generate unique images through prompt inputs.
+                    Conceptualized, developed, and implemented a dynamic web application
+                    dedicated to generating AI-generated images. Created an intuitive and user-friendly interface that
+                    allows users to effortlessly generate unique images through prompt inputs.
                 </p>
                 <p>
                     <a
