--- a/devopsportfolio/index.html
+++ b/devopsportfolio/index.html
@@ -21,8 +21,8 @@
                 <p>
                     Designed and developed an Azure ETL data pipeline that extracts data daily from various sources,
                     performs transformations using Azure Data Factory, Databricks, and Data Lake. This implementation
-                    resulted in efficiency gains for OS licensing, reduced manual efforts by 10 hours per week, and
-                    valuable insights. Furthermore, trained and deployed a cost-saving ML model using LSTM, TensorFlow,
+                    resulted in efficiency gains for valuable licensing insights and reduced manual efforts by 10 hours
+                    per week. Furthermore, trained and deployed a cost-saving ML model using LSTM, TensorFlow,
                     Scikit Learn, Pandas, NumPy, Matplotlib, and Seaborn, saving over $500k per year.
                 </p>
                 <p>
@@ -218,7 +218,7 @@
             <section>
                 <h3><b>Infrastructure as Code with Azure Bicep and AWS CDK</b></h3>
                 <p>
-                    Accelerating a rapid deployment to Azure and AWS using Infrastructure as Code with Github actions
+                    Accelerated a rapid deployment to Azure and AWS using Infrastructure as Code with Github actions
                     CICD pipeline.
                 </p>
                 <p>
